NavBar prototype added + Calenderview feature started

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,4 +40,13 @@
     <% } %>
   </main>
 </body>
+
+<nav class="navbar">
+  <a href="/calendar" class="nav-item">🗓 Calendar</a>
+
+  <a href="/add" class="nav-add">➕</a>
+
+  <a href="/" class="nav-item active">📋 Tasks</a>
+</nav>
+
 </html>
