Calender.ejs has navbar sucessfully added

--- a/views/calendarView.ejs
+++ b/views/calendarView.ejs
@@ -106,7 +106,6 @@
 <body>
   <header>
     <h1>📅 Calendar View</h1>
-    <a class="btn" href="/">📋 Tasks</a>
   </header>
 
   <div class="calendar">
@@ -222,4 +221,14 @@
     renderCalendar(selectedYear, selectedMonth);
   </script>
 </body>
+</html>
+
+<nav class="navbar">
+  <a href="/calendar" class="nav-item">🗓 Calendar</a>
+
+  <a href="/add" class="nav-add">+</a>
+
+  <a href="/" class="nav-item active">📋 Tasks</a>
+</nav>
+
 </html>
