--- a/public/style.css
+++ b/public/style.css
@@ -112,10 +112,14 @@ body {
 /* HEADER*/
 header {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  gap: 12px;
+
   margin: 30px 0;
+  text-align: center;
 }
+
 
 header h1 {
   font-size: 1.8rem;
