--- a/public/style.css
+++ b/public/style.css
@@ -141,12 +141,9 @@ body {
 /* HEADER*/
 header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  gap: 12px;
-
   margin: 30px 0;
-  text-align: center;
 }
 
 
