--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!-- Kyal Sin Htoo -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -93,6 +94,7 @@
     </div>
   </div>
 
+  <!-- Alicia -->
   <script>
     let activeTaskId = null;
 
