minor changes for notifcation section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,7 +134,7 @@
   <div id="dueReminderPopup" class="due-notification-box">
     <span id="reminderText"></span>
   </div>
-   
+  <!-- Alicia's pop-up notifiation-->
   <script>
     function closeReminderAlicia() {
       const popup = document.getElementById('dueReminderPopup');
